--- a/views/log_in.pug
+++ b/views/log_in.pug
@@ -13,3 +13,9 @@ block content
             input(name="password" type="password" minlength="8")
 
             button(type="submit") Log in
+
+    a(href="/signup") Sign Up 
+    br
+    a(href="/joinclub") Get Membership 
+    br
+    a(href="/") Home
