--- a/views/sign_up.pug
+++ b/views/sign_up.pug
@@ -29,5 +29,7 @@ block content
     input(type="text",id="fullName",name="fullName",minlength="3", required)  
 
     br
+    label(for="admin") Admin (type yes for admin): 
+    input(type="text" id="admin" name="admin")
 
     button(type="submit") Join the Club.
